2007-08-29  Dave O'Neill <dmo@roaringpenguin.com>

	* VERSION 5.420_02 (developer release)

	* (bugfix) Correct 'use vars' and add a 'use strict' (fixes RT #22681)

	* (bugfix) Don't allow all-whitespace filenames in
	  recommended_filename() (fixes RT #6115)

	* (bugfix) Require IO-stringy 2.110.  Fixes RT tickets 11312, 11452,
	  12375, 12784, and 18791

	* (cleanup) IO::Wrap no longer used, IO::ScalarArray use minimized


2007-06-18  Dave O'Neill <dmo@roaringpenguin.com>

	* VERSION 5.420_01 (developer release)

	* (bugfix) Fix warning generated by a header of "Content-Type: /".
	  Previous versions would warn about undefined variables.  We now
	  set a blank type and subtype.

	* (cleanup) Partial removal of dependencies on IO::Scalar and
	  IO::ScalarArray.  We now use Perl's built-in I/O on scalars as much
	  as possible.  NOTE THAT THIS REQUIRES PERL 5.8!

	* (cleanup) FileHandle usage removed in favour of IO::File

	* (cleanup) Remove broken utility methods -- shellquote() because it
	  didn't really make anything safe, and catfile(), because File::Spec
	  is better.

	* (cleanup) Multiple test cleanups, including removal of
	  ExtUtils/TBone.pm.  Tests now use Test::More.

	* (cleanup) Remove support for recycling tempfiles ( tmp_recycling() and
	  its usage in new_tmpfile() )

	* (cleanup) Remove nasty "eval join('',<::DATA>) unless caller()"
	  testing code from various modules

	* (cleanup) Merge all changelog information from README and
	  MIME/Tools.pm into ChangeLog

2006-03-17  David F. Skoll  <dfs@roaringpenguin.com>
	
	* VERSION 5.420 RELEASED

	* Fix regression introduced in 5.419 -- quoted-printable
	encoding would sometimes fail on "textual" MIME parts.

2005-12-22  David F. Skoll  <dfs@roaringpenguin.com>

	* VERSION 5.419 RELEASED

	* Added MIME::Parser->decode_bodies method.  This lets you force
	MIME::Tools to store body parts WITHOUT decoding them.  Useful
	if you need the exact unmangled message source (for example,